[package]
name = "grin-map"
version = "0.1.0"
authors = ["Max Lavrenov <max.lavrenov@optiopay.com>"]
edition = "2018"

[dependencies]
grin_p2p = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0" }
grin_core = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0" }
grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0" }
grin_chain = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0" }
env_logger = "0.6.2"
log = "0.4.7"
chrono = "0.4.7"
crossbeam-channel = "0.3.8"
crossbeam-queue = "0.1.2"
crossbeam-utils = "0.6.5"
structopt = "0.2.18"
